--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD131 | Dynamic Web Fundementals | Matthew Gifford</title>
+    <title>WDD131 - Dynamic Web Fundementals - Matthew Gifford</title>
     <meta name="author" content="Matthew Gifford">
-    <meta name="description" content="WDD131 Dynamic Web Fundementals Matthew Gifford Homepage">
+    <meta name="description"
+        content="WDD131 Dynamic Web Fundementals Matthew Gifford Homepage with basic bio information and state facts with pictures and links to common dev resources">
     <link rel="stylesheet" href="styles/base.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,7 +23,7 @@
         <h1>WDD 131: Dynamic Web Fundementals - Matthew Gifford</h1>
         <nav>
             <ul>
-                <li><a href="www.linkedin.com/in/mjgifford3485" title="linkedin">LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/mjgifford3485" title="linkedin">LinkedIn</a></li>
                 <li><a href="https://byupw.instructure.com/" title="Canvas">Canvas</a></li>
                 <li><a href="https://www.churchofjesuschrist.org/study/scriptures/nt/luke/7?lang=eng&id=p41-p43#p41"
                         title="Parable of the two debtors">Scripture</a></li>
@@ -57,14 +58,14 @@
         </section>
         <section class="card2">
             <h2>Web Dev Resources</h2>
-            <ul>
-                <li>Dev.to Community</li>
-                <li>Smashing Magazine</li>
-                <li>CSS Tricks</li>
-                <li>W3 Schools</li>
-                <li>Udemy</li>
-                <li>Image Placeholder</li>
-            </ul>
+            <nav>
+                <ul>
+                    <li><a href="https://coolors.co/e64d0b-01295f-424141-dadad9" title="Coolors">Coolors</li>
+                    <li><a href="https://squoosh.app/" title="Squoosh">Squoosh</li>
+                    <li><a href="https://fonts.google.com/" title="Google Fonts">Google Fonts</li>
+                    <li><a href="https://www.w3schools.com/" title="W3 SChools">W3 Schools</a></li>
+                </ul>
+            </nav>
         </section>
     </main>
     <footer>
