--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
             <h2>Web Dev Resources</h2>
             <nav>
                 <ul>
-                    <li><a href="https://coolors.co/e64d0b-01295f-424141-dadad9" title="Coolors">Coolors</li>
-                    <li><a href="https://squoosh.app/" title="Squoosh">Squoosh</li>
-                    <li><a href="https://fonts.google.com/" title="Google Fonts">Google Fonts</li>
+                    <li><a href="https://coolors.co/e64d0b-01295f-424141-dadad9" title="Coolors">Coolors</a></li>
+                    <li><a href="https://squoosh.app/" title="Squoosh">Squoosh</a></li>
+                    <li><a href="https://fonts.google.com/" title="Google Fonts">Google Fonts</a></li>
                     <li><a href="https://www.w3schools.com/" title="W3 SChools">W3 Schools</a></li>
                 </ul>
             </nav>
