--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 131 - Dynamic Web Fundementals - Matthew Gifford</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Matthew Gifford</title>
     <meta name="author" content="Matthew Gifford">
     <meta name="description"
         content="WDD131 Dynamic Web Fundementals Matthew Gifford Homepage with basic bio information and state facts with pictures and links to common dev resources">
