--- a/week02/bom.html
+++ b/week02/bom.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Users can add their favorite Book of Mormon chapters and display on a list.">
     <meta name="title" content="Matthew Gifford">
     <meta rel="stylesheet" href="styles/bom.css">
-    <meta href="scripts/bom.js">
+    <script src="scripts/bom.js" defer></script>
 </head>
 
 <body>
