--- a/temples.html
+++ b/temples.html
@@ -20,7 +20,7 @@
 <body>
     <header>
         <h1>Temple Album</h1>
-        <button id="menu"></button>
+        <button id="menu" aria-label="navigation menu button"></button>
         <nav>
             <ul class="navigation">
                 <li><a href="#" title="Home" class="active">Home</a></li>
