fixed html issues

--- a/place.html
+++ b/place.html
@@ -21,8 +21,8 @@
     </header>
     <main>
         <picture class="japan">
-            <source srcset="images/japan-large.webp" media="(min-width: 450px)" width="auto" height="auto">
-            <img src="images/japan.webp" alt="Japan" width="450" height="auto">
+            <source srcset="images/japan-large.webp" media="(min-width: 450px)" width="500">
+            <img src="images/japan.webp" alt="Japan" width="450">
         </picture>
         <div class="data">
             <h2>Data</h2>
@@ -37,7 +37,7 @@
         </div>
         <div class="weather">
             <h2>Weather</h2>
-            <img src="images/rainy.svg" height="50px" width="auto">
+            <img src="images/rainy.svg" alt="rainy" height="50px">
             <ul>
                 <li>Temperature: <span id="getTemp">9</span>°C</li>
                 <li>Conditions: Rainy</li>
