fixed html error

--- a/place.html
+++ b/place.html
@@ -37,7 +37,7 @@
         </div>
         <div class="weather">
             <h2>Weather</h2>
-            <img src="images/rainy.svg" alt="rainy" height="50px">
+            <img src="images/rainy.svg" alt="rainy" width="50">
             <ul>
                 <li>Temperature: <span id="getTemp">9</span>°C</li>
                 <li>Conditions: Rainy</li>
