--- a/temples.html
+++ b/temples.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DocumentWDD130 - Dynamic Web Fundamentals - Matthew Gifford</title>
+    <title>WDD131 - Dynamic Web Fundamentals - Matthew Gifford</title>
     <meta name="description" content="Photo album of temple pictures.">
     <meta name="author" content="Matthew Gifford">
     <link rel="stylesheet" href="styles/temples.css">
