--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -26,6 +26,11 @@
         <h2>Site Purpose</h2>
         <p>The purpose of this website is to provide an explanation of what tabletop roleplaying games are along with a
             description of some of the more popular games and resources for finding more information.</p>
+        <h3>Scenarios</h3>
+        <p>What are tabletop roleplaying games?</p>
+        <p>How do I get started?</p>
+        <p>What do I need to be able to play?</p>
+        <p>Where can I find others who play?</p>
         <h3>Color Schema</h3>
         <p>Header Color: #fb0a26</p>
         <p>Pargraph Color: #46ebeb</p>
