--- a/ttrpg/dnd-character.html
+++ b/ttrpg/dnd-character.html
@@ -12,19 +12,19 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/ttrpg.css">
     <link rel="stylesheet" href="styles/ttrpg-large.css">
-    <link rel="stylesheet" href="styles/ttrpg-large.css">
-    <script src="scripts/ttrpg.js" defer></script>
+    <script src="scripts/dnd-character.js" defer></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Tabletop Roleplaying Games</h1>
-            <img src="images/book-and-quill.webp" alt="book-and-quill" loading="lazy">
+            <h1></h1>
+            <img src="images/dungeons-dragons-seeklogo.webp" alt="Dungeons and Dragons logo" loading="lazy">
+            <img src="images/d20.webp" alt="D20 logo" loading="lazy">
         </div>
         <nav>
             <ul class="navigation">
-                <li><a href="#" title="Home" class="active">Home</a></li>
-                <li><a href="dnd.html" title="Dungeons and Dragons">Dungeons and Dragons</a></li>
+                <li><a href="index.html" title="Home">Home</a></li>
+                <li><a href="#" title="Dungeons and Dragons" class="active">Dungeons and Dragons</a></li>
                 <li><a href="cpr.html" title="Cyberpunk RED">Cyberpunk RED</a></li>
                 <li><a href="vampire.html" title="Vampire: The Masquerade">Vampire: The Masquerade</a></li>
                 <li><a href="more-info.html" title="More Info">More Info</a></li>
@@ -32,12 +32,13 @@
         </nav>
     </header>
     <main>
-        <h2>What is table top roleplaying?</h2>
-        <p>Tabletop roleplaying consists of a group of players and a gamemaster that controls the game.  Books determine the rules of how to play the game, but it is up to the gamemaster to create the world.  Table top roleplaying games require the use of dice of different sizes.</p>
+        <h2>Thank you for creating a character!</h2>
+        <p><span class="label">You have created </span><span class="dndCharacters"></span> Dungeons and Dragons character(s).</span></p>
     </main>
     <footer>
         <p>© <span id="currentyear"></span> ⭐ Matthew Gifford ⭐ Washington</p>
         <p>Last Modified: <span id="lastModified"></span></p>
+        <a href="credits.html" title="credits">Credits</a>
     </footer>
 </body>
 </html>
