--- a/ttrpg/vampire-character.html
+++ b/ttrpg/vampire-character.html
@@ -12,11 +12,14 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/ttrpg.css">
     <link rel="stylesheet" href="styles/ttrpg-large.css">
-    <script src="scripts/ttrpg.js" defer></script>
+    <script src="scripts/vampire-character.js" defer></script>
 </head>
 <body>
     <header>
-        <h1>Dungeons and Dragons</h1>
+        <div class="logo">
+            <h1>Vampire: The Masquerade</h1>
+            <img src="images/vampire.webp" alt="vampire logo">
+        </div>
         <nav>
             <ul class="navigation">
                 <li><a href="index.html" title="Home">Home</a></li>
@@ -28,7 +31,9 @@
         </nav>
     </header>
     <main>
-
+        <h2>Thank you for creating a character!</h2>
+        <p><span class="label">You have created </span><span class="vampireCharacters"></span> Vampire: the Masqureade
+            character(s).</span></p>
     </main>
     <footer>
         <p>© <span id="currentyear"></span> ⭐ Matthew Gifford ⭐ Washington</p>
