--- a/diceroller/diceroller.html
+++ b/diceroller/diceroller.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dice Roller</title>
-    <script src="scripts/diceroller.js"></script>
+    <script src="scripts/diceroller.js" defer></script>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <label for="diceSize">d</label>
     <input type="number" id="diceSize" value="6" min="2" />
 
-    <button onclick="rollDice()">Roll Dice</button>
+    <button id="roll">Roll Dice</button>
 
     <h2>Result:</h2>
     <div id="result"></div>
