--- a/ttrpg/cpr-character.html
+++ b/ttrpg/cpr-character.html
@@ -12,19 +12,18 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/ttrpg.css">
     <link rel="stylesheet" href="styles/ttrpg-large.css">
-    <link rel="stylesheet" href="styles/ttrpg-large.css">
-    <script src="scripts/ttrpg.js" defer></script>
+    <script src="scripts/cpr-character.js" defer></script>
 </head>
 <body>
     <header>
         <div class="logo">
-            <h1>Tabletop Roleplaying Games</h1>
-            <img src="images/book-and-quill.webp" alt="book-and-quill" loading="lazy">
+            <h1>Cyberpunk RED</h1>
+            <img src="images/cpr.webp" alt="cyberpunk red logo">
         </div>
         <nav>
             <ul class="navigation">
-                <li><a href="#" title="Home" class="active">Home</a></li>
-                <li><a href="dnd.html" title="Dungeons and Dragons">Dungeons and Dragons</a></li>
+                <li><a href="index.html" title="Home">Home</a></li>
+                <li><a href="#" title="Dungeons and Dragons" class="active">Dungeons and Dragons</a></li>
                 <li><a href="cpr.html" title="Cyberpunk RED">Cyberpunk RED</a></li>
                 <li><a href="vampire.html" title="Vampire: The Masquerade">Vampire: The Masquerade</a></li>
                 <li><a href="more-info.html" title="More Info">More Info</a></li>
@@ -32,8 +31,9 @@
         </nav>
     </header>
     <main>
-        <h2>What is table top roleplaying?</h2>
-        <p>Tabletop roleplaying consists of a group of players and a gamemaster that controls the game.  Books determine the rules of how to play the game, but it is up to the gamemaster to create the world.  Table top roleplaying games require the use of dice of different sizes.</p>
+        <h2>Thank you for creating a character!</h2>
+        <p><span class="label">You have created </span><span class="cprCharacters"></span> Cyberpunk RED
+            character(s).</span></p>
     </main>
     <footer>
         <p>© <span id="currentyear"></span> ⭐ Matthew Gifford ⭐ Washington</p>
