--- a/ttrpg/dnd-character.html
+++ b/ttrpg/dnd-character.html
@@ -39,6 +39,7 @@
         <p>© <span id="currentyear"></span> ⭐ Matthew Gifford ⭐ Washington</p>
         <p>Last Modified: <span id="lastModified"></span></p>
         <a href="credits.html" title="credits">Credits</a>
+        <a href="credits.html" title="credits">Credits</a>
     </footer>
 </body>
 </html>
