--- a/ttrpg/index.html
+++ b/ttrpg/index.html
@@ -38,6 +38,7 @@
     <footer>
         <p>© <span id="currentyear"></span> ⭐ Matthew Gifford ⭐ Washington</p>
         <p>Last Modified: <span id="lastModified"></span></p>
+        <a href="credits.html" title="credits">Credits</a>
     </footer>
 </body>
 </html>
