corrections to form

--- a/form.html
+++ b/form.html
@@ -39,15 +39,15 @@
                     <input type="radio" name="stars" id="onestar" value="1" required><label for="onestar"></label>
                 </div>
                 <div>
-                    <label for="installationdate" class="installation">Date of Installation</label>
+                    <label for="installationdate" class="installationdate">Date of Installation</label>
                     <input type="date" name="installationdate" id="installationdate" required>
                 </div>
                 <div class="features">
                     <h2>Which features did you find useful in the product? (Check all that apply)</h2>
-                    <label for="durability"><input type="checkbox" name="features" value="yes">Durability</label>
-                    <label for="ease"><input type="checkbox" name="features" value="yes">Ease of Use</label>
-                    <label for="performance"><input type="checkbox" name="features" value="yes">Performance</label>
-                    <label for="design"><input type="checkbox" name="features" value="yes">Design</label>
+                    <label for="durability" id="durability"><input type="checkbox" name="features" value="yes">Durability</label>
+                    <label for="ease" id="ease"><input type="checkbox" name="features" value="yes">Ease of Use</label>
+                    <label for="performance" id="performance"><input type="checkbox" name="features" value="yes">Performance</label>
+                    <label for="design" id="design"><input type="checkbox" name="features" value="yes">Design</label>
                 </div>
                 <div>
                     <label for="review" class="review">Written Review (Optional)</label>
