corrections to form

--- a/form.html
+++ b/form.html
@@ -44,10 +44,10 @@
                 </div>
                 <div class="features">
                     <h2>Which features did you find useful in the product? (Check all that apply)</h2>
-                    <label for="durability" id="durability"><input type="checkbox" name="features" value="yes">Durability</label>
-                    <label for="ease" id="ease"><input type="checkbox" name="features" value="yes">Ease of Use</label>
-                    <label for="performance" id="performance"><input type="checkbox" name="features" value="yes">Performance</label>
-                    <label for="design" id="design"><input type="checkbox" name="features" value="yes">Design</label>
+                    <label for="durability"><input type="checkbox" name="features" value="yes" id="durability">Durability</label>
+                    <label for="ease"><input type="checkbox" name="features" value="yes" id="ease">Ease of Use</label>
+                    <label for="performance"><input type="checkbox" name="features" value="yes" id="performance">Performance</label>
+                    <label for="design"><input type="checkbox" name="features" value="yes" id="design">Design</label>
                 </div>
                 <div>
                     <label for="review" class="review">Written Review (Optional)</label>
